Create Web Page

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
 
         <div class="text-box">
             <h1 class="heading-primary">
-                <span class="heading-primary-main">Universe</span>
-                <span class="heading-primary-sub">is where life happens</span>
+                <span class="heading-primary-main">The cars </span>
+                <span class="heading-primary-sub">we drive say a lot about us</span>
             </h1>
+            <div class="btn-div">
+                <a href="#" class="btn">Continue</a>
+            </div>
+            
         </div>
 
     </header>
